<?xml version="1.0"?>
<package format="2">
  <name>usb_cam</name>
  <version>0.0.1</version>
  <description>ROS UVC camera package developed as part of a final project required from a master's degrees class.</description>

  <maintainer email="lsnreys@gmail.com">Luciana Reys</maintainer>
  <maintainer email="matheusns@gmail.com">Matheus Nascimento</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
